add paragraph block elements to the page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello, world!</h1>
-<p>Welcome to my first website! i learnt how to create a website</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My first webpage</title>
+  </head>
+  <body>
+    <p>hello!</p>
+    <p>Welcome to my first webpage!</p>
+  </body>
+</html>
