add header block elements

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>My first webpage</title>
   </head>
   <body>
+    <h1>My first webpage</h1>
+    <h2>written with a little guidance from Moringa</h2>
+
     <p>hello!</p>
     <p>Welcome to my first webpage!</p>
   </body>
