add list elements

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 
     <p>hello!</p>
     <p>Welcome to my first webpage!</p>
+
+    <p>I am excited to create my own webpage
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>And a lot more!</li>
+    </ul>
   </body>
 </html>
