--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h2>written with a little guidance from Moringa</h2>
+    <h2>written with a little guidance from <em>Moringa</h2>
 
+    <p>Welcome to my <strong>first web page</strong>!</p>
     <p>hello!</p>
     <p>Welcome to my first webpage!</p>
+    <p>Check out <a href="http://bleacherreport/">Bleacher Report</a>. It's a website that focuses sports
+    <p>Here is a link to my <a href="favourite=things.html">favourite</a>.</p
+    < img src="images/uefa-champions-league.jpg" alt="A photo of champions league football">
 
     <p>I am excited to create my own webpage
     <ul>
