delete styles.css and some images

--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first webpage</title>
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <title>Portfolio </title>
+      <link rel="stylesheet" href="/css/styles.css">
+
   </head>
   <body>
-    <h1>My first webpage</h1>
-    <h2>written with a little guidance from <em>Moringa</h2>
+    <h1>Trevor Isiche</h1>
+      <div ><img src="images/IMG_20190904_173703.jpg" width="400" height="350" alt=""></div>
+      <p> I am a graduate of high school and i have also done one year Information Technology</p>
+      <p> I decided to do programming because i want to be an entreprenuer in future so i came to Moringa school to get the necessary skills for programming.</p>
+      <p> I love watching as well as playing football. I also like watching movies and hanging out with friends</p>
+      <div ><a href="https://trevor-isiche.github.io/recipe-cookie/">cookie recipe</a></div>
+      <div ><a href="https://trevor-isiche.github.io/my-first-webpage/">my first website</a></div>
+      <div ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></div>
 
-    <p>Welcome to my <strong>first web page</strong>!</p>
-    <p>hello!</p>
-    <p>Welcome to my first webpage!</p>
-    <p>Check out <a href="http://bleacherreport/">Bleacher Report</a>. It's a website that focuses sports
-    <p>Here is a link to my <a href="favourite=things.html">favourite</a>.</p
-    < img src="images/uefa-champions-league.jpg" alt="A photo of champions league football">
-
-    <p>I am excited to create my own webpage
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Javascript</li>
-      <li>And a lot more!</li>
-    </ul>
   </body>
 </html>
