add readme and lincensing

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Portfolio </title>
-      <link rel="stylesheet" href="/css/styles.css">
+      <link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
     <h1>Trevor Isiche</h1>
       <div ><img src="images/IMG_20190904_173703.jpg" width="400" height="350" alt=""></div>
+      <h4>About Me</h4>
       <p> I am a graduate of high school and i have also done one year Information Technology</p>
       <p> I decided to do programming because i want to be an entreprenuer in future so i came to Moringa school to get the necessary skills for programming.</p>
       <p> I love watching as well as playing football. I also like watching movies and hanging out with friends</p>
