fixed styles.css link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Portfolio </title>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="./css/styles.css">
 
   </head>
   <body>
@@ -12,6 +12,8 @@
       <p> I am a graduate of high school and i have also done one year Information Technology</p>
       <p> I decided to do programming because i want to be an entreprenuer in future so i came to Moringa school to get the necessary skills for programming.</p>
       <p> I love watching as well as playing football. I also like watching movies and hanging out with friends</p>
+      <p> I also been passionate about learning how to codeand also open to be employed with one of the big tech companiesin kenya and the hello-world</p>
+      <p>i also very hardworking in everthing i do</p>
       <div ><a href="https://trevor-isiche.github.io/recipe-cookie/">cookie recipe</a></div>
       <div ><a href="https://trevor-isiche.github.io/my-first-webpage/">my first website</a></div>
       <div ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></div>
