added p tags on the projects that i have done

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   <body>
     <h1>Trevor Isiche</h1>
       <div ><img src="images/IMG_20190904_173703.jpg" width="400" height="350" alt=""></div>
-      <h4>About Me</h4>
-      <p> I am a graduate of high school and i have also done one year Information Technology</p>
-      <p> I decided to do programming because i want to be an entreprenuer in future so i came to Moringa school to get the necessary skills for programming.</p>
-      <p> I love watching as well as playing football. I also like watching movies and hanging out with friends</p>
-      <p> I also been passionate about learning how to codeand also open to be employed with one of the big tech companiesin kenya and the hello-world</p>
-      <p>i also very hardworking in everthing i do</p>
-      <div ><a href="https://trevor-isiche.github.io/recipe-cookie/">cookie recipe</a></div>
-      <div ><a href="https://trevor-isiche.github.io/my-first-webpage/">my first website</a></div>
-      <div ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></div>
-
+        <h4>About Me</h4>
+        <p> I am a graduate of high school and i have also done one year Information Technology</p>
+        <p> I decided to do programming because i want to be an entreprenuer in future so i came to Moringa school to get the necessary skills for programming.</p>
+        <p> I love watching as well as playing football. I also like watching movies and hanging out with friends</p>
+        <p> I also been passionate about learning how to codeand also open to be employed with one of the big tech companiesin kenya and the hello-world</p>
+        <p>i also very hardworking in everthing i do</p>
+        <p>Below is a list of projects that i have done</p>
+        <ol>
+        <li ><a href="https://trevor-isiche.github.io/recipe-cookie/">cookie recipe</a></li>
+         <p> This project mainly emphasizes on HTML and css. I found the content quite good and i understood most concepts.</p>
+        <li ><a href="https://trevor-isiche.github.io/my-first-webpage/">my first website</a></li>
+        <p>This project emphasized on forking,identation and spacing,creating a readmeand block and inline elements</p>
+        <li ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></li>
+        <p>This project emphazies on github and github pages,branching and merging</p>
+        </ol>
   </body>
 </html>
