addded div class tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Trevor Isiche</h1>
+    <div class="overlay">
       <div ><img src="images/IMG_20190904_173703.jpg" width="400" height="350" alt=""></div>
         <h4>About Me</h4>
         <p> I am a graduate of high school and i have also done one year Information Technology</p>
@@ -23,5 +24,6 @@
         <li ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></li>
         <p>This project emphazies on github and github pages,branching and merging</p>
         </ol>
+      </div>
   </body>
 </html>
