added text on description of the links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li ><a href="https://trevor-isiche.github.io/recipe-cookie/">cookie recipe</a></li>
          <p> This project mainly emphasizes on HTML and css. I found the content quite good and i understood most concepts.</p>
         <li ><a href="https://trevor-isiche.github.io/my-first-webpage/">my first website</a></li>
-        <p>This project emphasized on forking,identation and spacing,creating a readmeand block and inline elements</p>
+        <p>This project emphasized on forking,identation and spacing,creating a readmeand block and inline elements as well as git branching</p>
         <li ><a href="https://trevor-isiche.github.io/hello-world/">Hello world</a></li>
         <p>This project emphazies on github and github pages,branching and merging</p>
         </ol>
